 -- Fixed double lbuf_free() introduced in 2.6.0.3 (Issue 188).
 -- Fixed compiler warnings in alloc.cpp (Issue 146 and 147).
 -- Fixed infinite loop in linewrap_general() resulting from safe_chr()
    being a macro instead of a function.
 -- Fixed subtle $-command exclusion (Issue 193).
 -- Fixed @color interactions with @name and @moniker (Issue 194).
 -- Fixed v() references in 'help substitutions3' (Issue 195).
 -- @clist/full column alignment with six-digit dbrefs (Issue 196).
 -- @mail index listing alignment with @moniker (Issue 197).
 -- Added local.cpp hook to affect INFO and populate Patches: line
    with other compile-time switches besides WOD_REALMS (Issue 51).
 -- Fix unlikely memory leak if executor of a queue task happens to be
    a bad object by the time the queued entry is executed.
 -- Issue 206: Prevent @ccreate from creating channels with duplicate
    names.
 -- Issue 199: wizhelp SUSPECT should describe that all commands from
    SUSPECT-set players are logged as controlled by the 'log'
    configuration option.


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~

 -- In MEMORY_BASED, avoid malloc() call each time an attribute is
    added to an object.
 -- Optimize atr_add_raw_LEN() to reduce Firan load time from 40 seconds
    to 15 seconds (which includes firan.db, mail.db, and comsys.db).
    This translates to something upward of 28 MB/s.
 -- Optimize do_comsystem() ability to recognize what is not an alias.
    Alierak.
 -- Added reference counting to global registers which should improve
    performance and greatly reduce memory usage for games which use the
    queue heavily.


Cosmetic Changes:
~~~~~~~~~~~~~~~~
 -- Increased width of certain columns in @list hashstats (Requests,
    Hits, and Checks) and @list allocations (Allocs).


Miscellaneous:
~~~~~~~~~~~~~
 -- Add mux_fopen() utility function to replace direct use of fopen().
 -- Updated config.guess, config.sub, and configure to later versions.
 -- Updated to autoconf 2.60a.